--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,9 +2,8 @@ name: Build Go app and push to Azure
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: [ main ]
+  
 
 jobs:
 
@@ -18,18 +17,9 @@ jobs:
       with:
         go-version: 1.19
 
-    - name: Copy static template files
-      run: xcopy /i templates build\templates
-
-    - name: Copy static public files
-      run: xcopy /i public build\public
-
     - name: Build
       run: go build -o build/go-app.exe -v
 
-    - name: Test
-      run: go test
-      
     - name: Deploy to Azure
       uses: Azure/webapps-deploy@v2
       with:
